KAN-159 fix: enables draggable chatbot window and improves scrollbar UX

--- a/src/app/components/chatbot-chat-input/ChatbotChatInput.module.scss
+++ b/src/app/components/chatbot-chat-input/ChatbotChatInput.module.scss
@@ -24,7 +24,6 @@
     blockquote {
       padding-left: 1rem;
       border-left: 1px solid black;
-      max-width: 24rem;
     }
   }
 
