--- a/src/app/components/chatbot-message-list/ChatbotMessageList.module.scss
+++ b/src/app/components/chatbot-message-list/ChatbotMessageList.module.scss
@@ -11,4 +11,21 @@
 
     @extend %typo-title-medium;
   }
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }
