--- a/src/app/components/chatbot-window/ChatbotWindow.module.scss
+++ b/src/app/components/chatbot-window/ChatbotWindow.module.scss
@@ -9,7 +9,26 @@
   gap: 1.6rem;
 
   min-width: 37.5rem;
-  max-height: 69.8rem;
+  max-height: 100%;
+
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 
   background-color: color.$alert-secondary-20;
   border-radius: 1.6rem;
@@ -40,6 +59,23 @@
     min-height: 19.5rem;
     overflow-y: auto;
 
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+
     > div {
       position: sticky;
       top: 0;
@@ -49,6 +85,5 @@
   &__footer {
     width: 100%;
     margin-top: auto;
-    bottom: 0;
   }
 }
